--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,10 @@
 			<id>pp</id>
 			<url>http://nexus.myplayplanet.net/content/groups/public/</url>
 		</repository>
+		<repository>
+			<id>stealthyone-repo</id>
+			<url>http://repo.stealthyone.com/content/groups/public</url>
+		</repository>
 	</repositories>
 
 	<dependencies>
@@ -51,19 +55,23 @@
 			<groupId>de.pro_crafting</groupId>
 			<artifactId>CommandFramework</artifactId>
 			<version>0.1.1-SNAPSHOT</version>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.sk89q.worldedit</groupId>
 			<artifactId>worldedit-bukkit</artifactId>
 			<version>6.1.2</version>
-			<scope>provided</scope> 
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.destroystokyo.paper</groupId>
 			<artifactId>paper-api</artifactId>
 			<version>1.10.2-R0.1-SNAPSHOT</version>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>mkremins</groupId>
+			<artifactId>fanciful</artifactId>
+			<version>0.4.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
